Spacing & Graph issues
Attempted to center the graph on mobile, no luck. Fixed spacing issues with Overview bar, added in the Muli font for the entire page, fixed spacing issues for desktop Navigation bar.

--- a/320-scss/src/scss/bootstraps.scss
+++ b/320-scss/src/scss/bootstraps.scss
@@ -1,15 +1,13 @@
-// Custom.scss
-// Option A: Include all of Bootstrap
+//Google Fonts Below
+//Multifont
+@import url("https://use.typekit.net/ejr0hrj.css");
 
-// Include any default variable overrides here (though functions won't be available)
-//-------overview----------------------------//
-
-
-
+//If any default variables need to be overridden, it needs to be added below.
+$font-family-base: "muli-text", sans-serif;
 
 
 
+//Variables need to be added above! BEFORE @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/bootstrap";
-
-// Then add additional custom code here
+// Add additional custom code here below
 
